examples/bad/reflect_non_pod.mko
// EXPECT: reflect_value_of expects a POD struct
// Maps (and other non-POD fields) are still rejected by reflect_value_of.
struct WithMap {
    m: map[string]int
    tag: int
}

fn main() {
    let w = WithMap { m: make(map[string]int), tag: 1 }
    let _ = reflect_value_of(w)
}
